--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ VUE_APP_COMPANY_ID=1
 VUE_APP_PRODUCT_ID=7
 VUE_APP_BACKEND_ENDPOINT=http://localhost:3031
 VUE_APP_TPL_PRIMARY_COLOR=#2c566f
+VUE_APP_SCORM_MODE=ON
+VUE_APP_QUANTITY_OF_SESSION=12
